--- a/03-ampersand-rxjs/index.html
+++ b/03-ampersand-rxjs/index.html
@@ -21,26 +21,28 @@
   }
 
   .target {
-    display: inline-block;
     position: absolute;
-    width: 10px;
-    height: 10px;
-    margin-left: -5px;
-    margin-top: -5px;
-    background: black;
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    margin-left: -100px;
+    margin-top: -100px;
+    border:1px solid #aaa;
     border-radius: 100%;
     transition: top 100ms linear, left 100ms linear;
   }
 
   .target:after {
     position: relative;
-    display: block;
-    width: 200px;
-    height: 200px;
-    top: -95px;
-    left: -95px;
-    border:1px solid #ccc;
+    width: 10px;
+    height: 10px;
+    left: 50%;
+    margin-left: -5px;
+    top: 50%;
+    margin-top: -5px;
+    background: black;
     border-radius: 100%;
+    display: block;
     content: ' ';
   }
 
